<resources>
    <string name="app_name">PocketSoccer</string>
    <string name="game_preferences">GamePreferences</string>

    <string name="database_name">PocketSoccer.db</string>
    <integer name="database_version">3</integer>

    <!--<string name="key_field_type">field_type</string>-->
    <!--<string name="key_game_speed">game_speed</string>-->
    <!--<string name="key_end_type">end_type</string>-->

    <!--Main Activity-->
    <string name="main_continue">Continue</string>
    <string name="main_new_game">New Game</string>
    <string name="main_scores">Scores</string>
    <string name="main_settings">Settings</string>

    <!--New GameModel-->
    <string name="new_game_pve">vs Computer</string>
    <string name="new_game_pvp">vs Player</string>

    <!--New GameModel Settings-->
    <string name="new_game_settings_add_player">Add Player</string>
    <string name="new_game_settings_player_name_hint">Player Name</string>
    <string name="new_game_settings_next">Next</string>
    <string name="new_game_settings_play">Play</string>

    <string-array name="country_names">
        <item>Egypt</item>
        <item>Algeria</item>
        <item>Finland</item>
        <item>Curacao</item>
        <item>Spain</item>
        <item>Mexico</item>
        <item>Australia</item>
        <item>India</item>
        <item>Liberia</item>
        <item>Nauru</item>
        <item>Belgium</item>
        <item>Greece</item>
        <item>Philippines</item>
        <item>Taiwan</item>
        <item>Nicaragua</item>
        <item>Norway</item>
        <item>Tanzania</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_field_type_green">Green</string>
    <string name="settings_field_type_yellow">Yellow</string>
    <string name="settings_field_type_grey">Grey</string>
    <string name="settings_game_speed_slow">Slow</string>
    <string name="settings_game_speed_medium">Medium</string>
    <string name="settings_game_speed_fast">Fast</string>
    <string name="settings_end_game_goals">Goals</string>
    <string name="settings_end_game_time">Time</string>
    <string name="settings_choose_field">Choose Field Type</string>
    <string name="settings_choose_speed">Choose Game Speed</string>
    <string name="settings_choose_end">Choose End Game</string>
    <string name="mutual_scores_main_menu">Go To Main Menu</string>
    <string name="mutual_scores_reset">Reset</string>
    <string name="settings_reset">Reset to Default</string>


</resources>
